Fix sidebar z-index

--- a/src/components/TableAdvancedV2/TableAdvancedV2.css
+++ b/src/components/TableAdvancedV2/TableAdvancedV2.css
@@ -9,7 +9,7 @@
 }
 
 .sidebarModalOverlay {
-  @apply fixed top-0 right-0 bottom-0 left-0;
+  @apply fixed top-0 right-0 bottom-0 left-0 z-20;
   background-color: var(--purple-100-cc);
 }
 .sidebarModalContent {
